# graphql-conf-2024-hackathon

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  REFERENCE.md  benchmark.sh  check.sh  comment.sh  flake.nix  main.graphql  mock.sh  package-lock.json  package.json  printjson.sh  schema.graphql  tojson.sh
.github/workflows/: benchmark-pull-request.yaml  comment.yaml  generate-baseline.yaml  update-leaderboard.yaml
benches/: posts-title.lua  wrk1.lua
mock-api/: Cargo.toml  README.md
mock-api/src/: database.rs  delay_middleware.rs  lib.rs  main.rs  utils.rs
mock-api/src/routes/: get_post.rs  get_posts.rs  get_user.rs  get_users.rs  mod.rs  reset_database.rs  update_data.rs
mocks/: 1.json  2.json  3.json
projects/aazam-gh/: Cargo.toml  run.sh
projects/aazam-gh/src/: main.rs
projects/dekkku/: Cargo.toml  run.sh
projects/dekkku/src/: main.rs
projects/mehulmathur16/: Cargo.toml  README.md  package-lock.json  package.json  run.sh  tsconfig.json
projects/mehulmathur16/src/: axios.ts  dataLoader.ts  index.ts  main.rs  resolvers.ts  schema.ts  types.ts
projects/meskill/: README.md  package-lock.json  package.json  run.sh
projects/meskill/src/: index.js  resolvers.js  schema.js
projects/ssddOnTop/: Cargo.toml  run.sh
projects/ssddOnTop/macros/: Cargo.toml
projects/ssddOnTop/macros-common/: Cargo.toml
projects/ssddOnTop/macros-common/src/: common.rs  enum_definition.rs  input_definition.rs  lib.rs
projects/ssddOnTop/macros/src/: document_definition.rs  merge_right.rs  resolver.rs
projects/ssddOnTop/schema/: schema.graphql
projects/ssddOnTop/src/: app_ctx.rs  cache.rs  directive.rs  endpoint.rs  from_doc.rs  hasher.rs  lib.rs  main.rs  path.rs  request_context.rs  target_runtime.rs
projects/ssddOnTop/src/blueprint/: blueprint.rs  definitions.rs  mod.rs  model.rs  wrapping_type.rs
projects/ssddOnTop/src/blueprint/operators/: http.rs
projects/ssddOnTop/src/config/: config.rs  kv.rs  mod.rs  reader.rs  url_query.rs
projects/ssddOnTop/src/dl/: dedupe.rs  mod.rs
projects/ssddOnTop/src/helpers/: headers.rs
projects/ssddOnTop/src/http/: headers.rs  method.rs  mod.rs  query_encoder.rs  req_template.rs  request.rs  request_handler.rs  response.rs
projects/ssddOnTop/src/ir/: discriminator.rs  eval_ctx.rs  eval_http.rs  eval_io.rs  mod.rs  model.rs
projects/ssddOnTop/src/jit/: model.rs
projects/ssddOnTop/src/json/: json_like.rs
projects/ssddOnTop/src/mustache/: eval.rs  mod.rs  parse.rs
projects/ssddOnTop/src/run/: http1.rs  mod.rs  run.rs
projects/ssddOnTop/src/value/: value.rs
projects/tailcall/: run.sh  tailcall.graphql
projects/tailcallhq/: run.sh  tailcall.graphql
reference/: run.sh  schema.graphql
reference/results/: posts-nested.out  posts-title.out  posts-with-user.out  stats.json
src/: benchmarks.rs  command.rs  graphql_tests.rs  introspection.rs  introspection_query.graphql  lib.rs  main.rs  project.rs  query_info.graphql  query_info.rs  request.rs  type_info.rs  utils.rs
src/snapshots/: hackathon__graphql_tests__request_posts-nested.graphql.snap  hackathon__graphql_tests__request_posts-title.graphql.snap  hackathon__graphql_tests__request_posts-with-user.graphql.snap
template/: README.md  run.sh
tests/: posts-nested.graphql  posts-title.graphql  posts-with-user.graphql
