[package]
name = "mock-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86" }
tokio = { version = "1.40.0", features = ["full"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = { version = "0.7.5" }
serde_json = { version = "1.0.127", features = ["preserve_order"] }
serde = { version = "1.0.200", features = ["derive"] }
mock_json = "0.1.8"
