[package]
name = "aazam"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
async-graphql = "5.0"
async-graphql-actix-web = "5.0"
futures = "0.3"
moka = { version = "0.9", features = ["future"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

[workspace]
members = []