[package]
name = "dekkku"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
easy_retry = { version = "0.1.0", features = ["async"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.127"
serde = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
async-graphql = {version = "7.0.8", features = [
    "dynamic-schema",
    "dataloader",
] }
async-graphql-poem = "7.0.9"
poem = "3.1.0"
futures = "0.3"
rand = "0.8"
tokio-retry = "0.3"
dashmap = "6.1.0"

[workspace]
members = []