[package]
name = "mehulmathur16"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
async-graphql = "5"
async-graphql-actix-web = "5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[workspace]
members = []