[package]
name = "ssddOnTop"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.40.0", features = ["full"]}
tracing = "0.1.40"
hyper = {version = "1.4.1",features = ["http1","server"]}
hyper-util = {version = "0.1.8", features = ["tokio"]}
http-body-util = "0.1.2"
bytes = "1.7.1"
anyhow = "1.0.87"
async-graphql = {version = "7.0.9", features = ["dynamic-schema"]}
serde_json = "1.0.127"
serde = { version = "1.0.210", features = ["derive"] }
async-graphql-value = "7.0.9"
serde_path_to_error = "0.1.16"
tracing-subscriber = "0.3.18"
num_cpus = "1.16.0"
reqwest = "0.12.7"
nom = "7.1.3"
pretty_assertions = "1.4.0"
serde_json_borrow = "0.6.0"
derive-getters = "0.5.0"
indexmap = "2.5.0"
derive_more = "0.99.18"
indenter = "0.3.3"
derive_setters = "0.1.6"
test-log = "0.2.16"
convert_case = "0.6.0"
prost-reflect = "0.14.2"
fxhash = "0.2.1"
strum_macros = "0.26.4"
